[package]
name = "tokio-cadence"
description = "Tokio-based metric sinks for Cadence "
version = "0.3.0"
repository = "https://github.com/ecliptical/tokio-cadence"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
license = "MIT"
keywords = ["cadence", "statsd", "metrics", "async", "tokio"]
edition = "2018"

[dependencies]
cadence = "0.24"
log = "0.4"
tokio = { version = "1.1", features = ["net", "sync", "time"] }

[dev-dependencies]
pretty_env_logger = "0.4"

[dev-dependencies.tokio]
version = "1.1"
features = ["net", "sync", "time", "macros", "rt-multi-thread"]
