[package]
name = "tokio-cadence"
description = "Tokio-based metric sinks for Cadence "
version = "0.6.0"
repository = "https://github.com/ecliptical/tokio-cadence"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
license = "MIT"
keywords = ["cadence", "statsd", "metrics", "async", "tokio"]
edition = "2021"
rust-version = "1.70"

[dependencies]
cadence = "1.5"
log = "0.4"
tokio = { version = "1", features = ["net", "sync", "time"] }

[dev-dependencies]
pretty_env_logger = "0.5"

[dev-dependencies.tokio]
version = "1"
features = ["net", "sync", "time", "macros", "rt-multi-thread"]
